syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "JetSetGo.ReservationManagement.Grpc";
message DateRangeDto {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

message ReadReservationDto{
  string id = 1;
  string accommodationId = 2;
  DateRangeDto dateRange =3;
  string status = 4;
}

message CreateReservationDto{
  string accommodationId = 1;
  DateRangeDto dateRange =2;
  string status = 4;
}

message GetReservationListRequest{}

message GetReservationListResponse{repeated ReadReservationDto reservations = 1;}

message CreateReservationRequest{
    CreateReservationDto reservation = 1;
}
message CreateReservationResponse {
  string createdId = 1;
}
message ReservationSearchRequest{
  google.protobuf.Timestamp startDate = 1;
  google.protobuf.Timestamp endDate = 2;
}
message CancelReservationRequest{ string id = 1; }
message CancelReservationResponse{ bool success = 1; }
